--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first github repo</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="https:///fonts.googleapis.com/css?family=Montserrat"rel="stylesheet">
 </head>
 <body>
+    <header class="site-header">
+        <nav>
+            <div class="logo">
+                <h1>Noor Construction</h1>
+            </div>
     
+            <div class="menu">
+                <ul>
+                    <li>Homes</li>
+                    <li>Services</li>
+                    <li>About Us</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+    
+        </nav>
 </body>
+
 </html>
