--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
             </div>
     
         </nav>
+        <section>
+            <div class="leftside">
+           <img src="images/images11.jpg">
+       </div>
+   
+           <div class="rightside">
+           <h1>Our Modern Website</h1>
+           <p>We are the Best Construction and Developer Company </p>
+   
+           <button>Welcome</button>
+       </div>
+       </section>
+       </header>
 </body>
 
 </html>
